--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,19 @@
+---
+import "../styles/global.css";
+---
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Expeditions Group</title>
 	</head>
 	<body>
 		<slot />
+		<a href="https://wa.link/hazb0a" class="fixed bottom-5 right-5 z-50 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 shadow-lg animate-wiggle" target="_blank" aria-label="Chat en WhatsApp">
+    		<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+        		<path d="M20.52 3.48A11.86 11.86 0 0012 0a11.91 11.91 0 00-10.2 17.91L0 24l6.24-1.8A11.91 11.91 0 0012 24c6.63 0 12-5.37 12-12a11.86 11.86 0 00-3.48-8.52zM12 22a9.91 9.91 0 01-5.06-1.38l-.36-.21-3.69 1.06 1.05-3.57-.23-.37A9.94 9.94 0 1122 12a9.93 9.93 0 01-10 10zm5.12-7.6c-.28-.14-1.64-.81-1.89-.9s-.44-.14-.62.14-.72.9-.89 1.08-.33.2-.61.07a8.13 8.13 0 01-2.4-1.47 8.88 8.88 0 01-1.64-2.04c-.17-.29 0-.44.13-.58s.29-.34.43-.52a2 2 0 00.29-.49.53.53 0 00-.03-.52c-.07-.14-.62-1.49-.84-2.05s-.45-.47-.62-.48h-.53a1 1 0 00-.72.34 3 3 0 00-.94 2.23 5.26 5.26 0 001.1 2.75c.15.2 2.2 3.36 5.35 4.7A12.6 12.6 0 0016.4 17c.73-.1 1.2-.45 1.37-.92s.17-.84.12-.92-.27-.2-.55-.33z"/>
+    		</svg>
+		</a>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
