--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -1,9 +1,10 @@
 ---
 const slides = [
-    { image: "../../slide1.png", title: "Cusco Mágico", buttonText: "Consultar Ahora", position: "object-center" },
-    { image: "../../slide2.png", title: "Tarapoto Fascinante", buttonText: "Consultar Ahora", position: "object-center" },
+    { image: "../../slide4.png", title: "Punta Cana", buttonText: "Consultar Ahora", position: "object-[30%_50%]" },
+    { image: "../../slide5.png", title: "San Andrés", buttonText: "Consultar Ahora", position: "object-[30%_50%]" },
+    { image: "../../slide2.png", title: "Cartagena de Indias", buttonText: "Consultar Ahora", position: "object-center" },
     { image: "../../slide3.png", title: "Royal de Decameron", buttonText: "Consultar Ahora", position: "object-[30%_50%]" },
-    { image: "../../slide4.png", title: "Punta Cana", buttonText: "Consultar Ahora", position: "object-[30%_50%]" }
+    { image: "../../slide1.png", title: "Cusco Mágico", buttonText: "Consultar Ahora", position: "object-center" },
 ];
 
 // Generar srcset automáticamente
