--- a/src/components/Recomended.astro
+++ b/src/components/Recomended.astro
@@ -11,32 +11,9 @@
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
-                <img src="/../paracas.png" alt="Sur Mágico - Dunas" class="object-cover rounded-lg w-full h-44" width="358" height="176" loading="lazy" />
-                <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
-                        SUR MÁGICO - DUNAS
-                    </a>
-                    <p class="text-gray-950">
-                        Explora junto a nosotros los destinos más sorprendentes del sur del Perú. Paracas, Huacachina, el hotel Las Dunas y los tours por Ica te esperan con paisajes únicos, aventuras en el desierto y experiencias llenas de historia y tradición.
-                    </p>
-                </div>
-                <div class="border border-pink-800 my-4"></div>
-                <a href="#" aria-label="Guía turística por el Sur Mágico - Dunas" target="_blank" class="flex justify-between items-center group">
-                    <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
-                        Consultar paquete
-                    </p>
-                    <svg width="28" height="28" viewBox="0 0 320 512" class="text-white bg-blue-800 p-1 rounded-full group-hover:bg-pink-800 transition-colors" data-icon="angle-right">
-                        <symbol id="ai:local:angle-right">
-                            <path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
-                        </symbol>
-                        <use xlink:href="#ai:local:angle-right"></use>
-                    </svg>
-                </a>
-            </div>
-            <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../punta-cana.png" alt="Punta Cana" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
-                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
+                    <a href="/punta-cana" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
                         PUNTA CANA
                     </a>
                     <p class="text-gray-950">
@@ -54,17 +31,17 @@
                 </a>
             </div>
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
-                <img src="/../rustica-vichayito.png" alt="Playas del norte - Rustica Vichayito" class="object-cover rounded-lg w-full h-44" loading="lazy" />
+                <img src="/../riviera-maya.png" alt="Punta Cana" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
                     <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
-                        PLAYAS DEL NORTE - RÚSTICA VICHAYITO
+                        RIVIERA MAYA
                     </a>
                     <p class="text-gray-950">
-                        Vive una escapada inolvidable en las playas del norte del Perú. Rústica Vichayito te ofrece descanso frente al mar, paisajes espectaculares y la combinación perfecta entre naturaleza, comodidad y buena gastronomía.
+                        Vive la magia de la Riviera Maya con nosotros. Descubre sus playas de arena blanca, sumérgete en cenotes místicos, explora ruinas mayas ancestrales y disfruta de resorts todo incluido pensados para brindarte confort, aventura y momentos inolvidables.
                     </p>
                 </div>
                 <div class="border border-pink-800 my-4"></div>
-                <a href="#" aria-label="Guía turística por Relax en la selva Cumaceba" target="_blank" class="flex justify-between items-center group">
+                <a href="#" aria-label="Guía turística por Punta Cana" target="_blank" class="flex justify-between items-center group">
                     <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
                         Consultar paquete
                     </p>
@@ -74,17 +51,37 @@
                 </a>
             </div>
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
-                <img src="/../tarapoto.png" alt="Tarapoto fascinante" class="object-cover rounded-lg w-full h-44" loading="lazy" />
+                <img src="/../cartagena-de-indias.png" alt="Cartagena de Indias" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
                     <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
-                        TARAPOTO <br /> FASCINANTE
+                        CARTAGENA DE INDIAS
                     </a>
                     <p class="text-gray-950">
-                        Descubre la magia de Tarapoto y déjate envolver por su selva fascinante. Cascadas imponentes, lagunas misteriosas y la calidez de su gente te esperan para una experiencia natural, relajante y llena de aventura.
+                        Descubre el encanto colonial de Cartagena de Indias con sus calles empedradas, murallas históricas y vibrante cultura. Disfruta su gastronomía, playas cercanas y una atmósfera llena de color y tradición caribeña.
                     </p>
                 </div>
                 <div class="border border-pink-800 my-4"></div>
-                <a href="#" aria-label="Guía turística por Tarapoto fascinante" target="_blank" class="flex justify-between items-center group">
+                <a href="#" aria-label="Guía turística por Cartagena de Indias" target="_blank" class="flex justify-between items-center group">
+                    <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
+                        Consultar paquete
+                    </p>
+                    <svg width="28" height="28" viewBox="0 0 320 512" class="text-white bg-blue-800 p-1 rounded-full group-hover:bg-pink-800 transition-colors" data-icon="angle-right">
+                        <use xlink:href="#ai:local:angle-right"></use>
+                    </svg>
+                </a>
+            </div>
+            <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
+                <img src="/../san-andres.png" alt="Cartagena de Indias" class="object-cover rounded-lg w-full h-44" loading="lazy" />
+                <div class="pt-8 pb-4">
+                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
+                        SAN ANDRÉS
+                    </a>
+                    <p class="text-gray-950">
+                        Explora el paraíso tropical de San Andrés, con su mar de siete colores, playas de arena blanca y cultura isleña única. Disfruta de actividades acuáticas, naturaleza exótica y una experiencia caribeña llena de relax y aventura.
+                    </p>
+                </div>
+                <div class="border border-pink-800 my-4"></div>
+                <a href="#" aria-label="Guía turística por Cartagena de Indias" target="_blank" class="flex justify-between items-center group">
                     <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
                         Consultar paquete
                     </p>
@@ -134,17 +131,17 @@
                 </a>
             </div>
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
-                <img src="/../cartagena-de-indias.png" alt="Cartagena de Indias" class="object-cover rounded-lg w-full h-44" loading="lazy" />
+                <img src="/../tarapoto.png" alt="Tarapoto fascinante" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
                     <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
-                        CARTAGENA DE INDIAS
+                        TARAPOTO <br /> FASCINANTE
                     </a>
                     <p class="text-gray-950">
-                        Descubre el encanto colonial de Cartagena de Indias con sus calles empedradas, murallas históricas y vibrante cultura. Disfruta su gastronomía, playas cercanas y una atmósfera llena de color y tradición caribeña.
+                        Descubre la magia de Tarapoto y déjate envolver por su selva fascinante. Cascadas imponentes, lagunas misteriosas y la calidez de su gente te esperan para una experiencia natural, relajante y llena de aventura.
                     </p>
                 </div>
                 <div class="border border-pink-800 my-4"></div>
-                <a href="#" aria-label="Guía turística por Cartagena de Indias" target="_blank" class="flex justify-between items-center group">
+                <a href="#" aria-label="Guía turística por Tarapoto fascinante" target="_blank" class="flex justify-between items-center group">
                     <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
                         Consultar paquete
                     </p>
@@ -153,6 +150,26 @@
                     </svg>
                 </a>
             </div>
+            <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
+                <img src="/../rustica-vichayito.png" alt="Playas del norte - Rustica Vichayito" class="object-cover rounded-lg w-full h-44" loading="lazy" />
+                <div class="pt-8 pb-4">
+                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
+                        PLAYAS DEL NORTE - RÚSTICA VICHAYITO
+                    </a>
+                    <p class="text-gray-950">
+                        Vive una escapada inolvidable en las playas del norte del Perú. Rústica Vichayito te ofrece descanso frente al mar, paisajes espectaculares y la combinación perfecta entre naturaleza, comodidad y buena gastronomía.
+                    </p>
+                </div>
+                <div class="border border-pink-800 my-4"></div>
+                <a href="#" aria-label="Guía turística por Relax en la selva Cumaceba" target="_blank" class="flex justify-between items-center group">
+                    <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
+                        Consultar paquete
+                    </p>
+                    <svg width="28" height="28" viewBox="0 0 320 512" class="text-white bg-blue-800 p-1 rounded-full group-hover:bg-pink-800 transition-colors" data-icon="angle-right">
+                        <use xlink:href="#ai:local:angle-right"></use>
+                    </svg>
+                </a>
+            </div>  
             <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
                 <img src="/../cajamarca.png" alt="Pacaya Samiria desde Tarapoto" class="object-cover rounded-lg w-full h-44" loading="lazy" />
                 <div class="pt-8 pb-4">
@@ -169,6 +186,49 @@
                         Consultar paquete
                     </p>
                     <svg width="28" height="28" viewBox="0 0 320 512" class="text-white bg-blue-800 p-1 rounded-full group-hover:bg-pink-800 transition-colors" data-icon="angle-right">
+                        <use xlink:href="#ai:local:angle-right"></use>
+                    </svg>
+                </a>
+            </div>
+            <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
+                <img src="/../arequipa.png" alt="Pacaya Samiria desde Tarapoto" class="object-cover rounded-lg w-full h-44" loading="lazy" />
+                <div class="pt-8 pb-4">
+                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
+                        AREQUIPA
+                    </a>
+                    <p class="text-gray-950">
+                        Descubre Arequipa, la ciudad blanca de imponentes volcanes y arquitectura colonial. Recorre su encantador centro histórico, saborea su exquisita gastronomía y vive una experiencia cultural auténtica en el corazón del sur peruano.
+                    </p>
+                </div>
+                <div class="border border-pink-800 my-4"></div>
+                <a href="#" aria-label="Guía turística por Pacaya Samiria desde Tarapoto" target="_blank" class="flex justify-between items-center group">
+                    <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
+                        Consultar paquete
+                    </p>
+                    <svg width="28" height="28" viewBox="0 0 320 512" class="text-white bg-blue-800 p-1 rounded-full group-hover:bg-pink-800 transition-colors" data-icon="angle-right">
+                        <use xlink:href="#ai:local:angle-right"></use>
+                    </svg>
+                </a>
+            </div>
+            <div class="bg-gray-50 bg-opacity-65 rounded-md px-6 py-4">
+                <img src="/../paracas.png" alt="Sur Mágico - Dunas" class="object-cover rounded-lg w-full h-44" width="358" height="176" loading="lazy" />
+                <div class="pt-8 pb-4">
+                    <a href="#" class="block text-xl text-blue-800 font-bold h-14 hover:text-orange-600 transition-colors">
+                        SUR MÁGICO - DUNAS
+                    </a>
+                    <p class="text-gray-950">
+                        Explora junto a nosotros los destinos más sorprendentes del sur del Perú. Paracas, Huacachina, el hotel Las Dunas y los tours por Ica te esperan con paisajes únicos, aventuras en el desierto y experiencias llenas de historia y tradición.
+                    </p>
+                </div>
+                <div class="border border-pink-800 my-4"></div>
+                <a href="#" aria-label="Guía turística por el Sur Mágico - Dunas" target="_blank" class="flex justify-between items-center group">
+                    <p class="text-blue-800 font-bold group-hover:text-pink-800 transition-colors">
+                        Consultar paquete
+                    </p>
+                    <svg width="28" height="28" viewBox="0 0 320 512" class="text-white bg-blue-800 p-1 rounded-full group-hover:bg-pink-800 transition-colors" data-icon="angle-right">
+                        <symbol id="ai:local:angle-right">
+                            <path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
+                        </symbol>
                         <use xlink:href="#ai:local:angle-right"></use>
                     </svg>
                 </a>
